# duplicate-scanner

./: LICENSE  Main.hs  README.md  check-dupe.cabal
src/: Checksum.hs  Main.hs  Parallel.hs
