name:                check-dupe
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              joshuatshaffer
maintainer:          joshuatshaffer@gmail.com
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable check-dupe
  main-is:             Main.hs
  other-modules:       Checksum
  build-depends:       base >=4.9 && <4.10, containers >=0.5 && <0.6, directory >=1.3 && <1.4, process >=1.4 && <1.5, cryptohash, bytestring
  hs-source-dirs:      src
  ghc-options:         -threaded -O3
  default-language:    Haskell2010
